index page finished

--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
 </head>
 
 <body>
+
+    <!-- Header -->
+
     <header>
         <span id="logo">
-            <img src="img/logo-newspaper-cf.png">
+            <img src="img/logo-newspaper-cf.png" alt="CF Logo">
         </span>
         <span id="banner1">
             <a href="https://codefactory.wien/" target="_blank">
                 <image src="img/banner-1.png" alt="Banner1">
             </a>
         </span>
-
     </header>
+
+    <!-- Navbar -->
 
     <nav>
         <ul>
@@ -32,12 +36,120 @@
 
     <main>
 
-        <div id="date"><p>Saturday, 23.05.2020</p></div>
+        <!-- Date -->
 
-        <div id="topnews"><p>Top news</p></div>
+        <div id="date">
+            <p>Saturday, 23.05.2020</p>
+        </div>
+
+        <!-- Top news banner -->
+
+        <div id="topnews">
+            <p>Top news</p>
+        </div>
+
+        <!-- Sidebanner 1 -->
+
+        <div class="sidebanner" id="sidebanner1"><a href="https://www.codefactory.wien" target="_blank"><img src="img/banner-2.png" alt="Banner 1 image"></a></div>
+
+        <!-- Article row 1 -->
+
+        <div class="articlerow">
+            <article><a href="article.html"><img src="img/nasa.png" alt="nasa image">
+                <p>NASA is trying to squash conspiracy theories about the space station leak</p></a>
+            </article>
+            <article><a href="article.html">
+                    <img src="img/eu.png" alt="EU image">
+                <p>EU approves controversial Copyright Directive, including internet ‘link tax’</p></a>
+
+            </article>
+            <article><a href="article.html">
+                    <img src="img/jeff.png" alt="Jeff Bezos image">
+                    <p>Jeff Bezos is going to create schools where ‘the child is the customer’</p></a>
+            </article>
+        </div>
+
+        <!-- Popular banner -->
+
+        <div id="popular">
+            <p>Popular</p>
+        </div>
+
+        <!-- Article row 2 -->
+
+        <div class="articlerow">
+            <article><a href="article.html">
+                <img src="img/polar.png" alt="Polar image">
+                <p>Polar’s new fitness watch will measure the wattage of your exercise</p></a>
+            </article>
+            <article><a href="article.html">
+                <img src="img/musk.jpg" alt="Musk image">
+                <p>Elon Musk smokes marijuana live on web show</p></a>
+            </article>
+            <article><a href="article.html">
+                <img src="img/snowden.jpg" alt="Snowden image">
+                <p>Edward Snowden surveillance powers ruled unlawful</p></a>
+            </article>
+        </div>
+
+        <!-- Ad banner -->
+
+        <div id="banner3">
+            <a href="https://www.codefactory.wien" target="_blank">
+                <img src="img/banner-3.png" alt="Banner 3"></a>
+        </div>
+
+        <!-- Sidebanner 2 -->
+
+        <div class="sidebanner" id="sidebanner2"><a href="https://www.codefactory.wien" target="_blank">
+                <img src="img/banner-4.png" alt="Banner 4 image"></a>
+        </div>
+
+        <!-- Article row 3 -->
+
+        <div class="row" id="raw1">
+            <article class="article2"><a href="article.html">
+                    <img src="img/iphone.png" alt="IPhone image">
+                <p>How to preorder the iPhone XS, XS Max, and XR</p></a>
+            </article>
+            <article class="article2"><a href="article.html">
+                    <img src="img/smart.png" alt="smart image">
+                <p>This smart power strip lets you individually control each outlet</p></a>
+            </article>
+        </div>
+
+        <div class="row" id="raw2">
+            <article class="article2"><a href="article.html">
+                    <img src="img/one.png" alt="One image">
+                <p>OnePlus announces super cheap USB-C earbuds</p></a>
+
+            </article>
+            <article class="article2"><a href="article.html">
+                    <img src="img/phone.png" alt="phone image">
+                <p>Spotify raises limit for offline downloads to 10,000 songs per device</p></a>
+            </article>
+        </div>
+
+        <!-- Footer -->
+
+        <footer>
+            <nav id="footernavbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="tech.html">Tech</a></li>
+                    <li><a href="culture.html">Culture</a></li>
+                    <li><a href="video.html">Video</a></li>
+                </ul>
+            </nav>
+
+            <img id="logobottom" src="img/logo-newspaper-cf.png" alt="CF Logo">
+
+
+            <p id="copyright">Max Strauss - CodeFactory 2020</p>
 
 
 
+        </footer>
 
 
 
