--- a/index.html
+++ b/index.html
@@ -1,170 +1,159 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <title>Document</title>
+	<meta charset='utf-8'>
+	<title>Code Review Max Strauss</title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
 
-    <!-- Header -->
+	<!-- Header -->
 
-    <header>
-        <span id="logo">
-            <img src="img/logo-newspaper-cf.png" alt="CF Logo">
-        </span>
-        <span id="banner1">
-            <a href="https://codefactory.wien/" target="_blank">
-                <image src="img/banner-1.png" alt="Banner1">
-            </a>
-        </span>
-    </header>
+	<header>
+		<span id="logo">
+			<img src="img/logo-newspaper-cf.png" alt="CF Logo">
+		</span>
+		<span id="banner1">
+			<a href="https://codefactory.wien/" target="_blank">
+				<image src="img/banner-1.png" alt="Banner1">
+			</a>
+		</span>
+	</header>
 
-    <!-- Navbar -->
+	<!-- Navbar -->
 
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#tech">Tech</a></li>
-            <li><a href="#culture">Culture</a></li>
-            <li><a href="#video">Video</a></li>
-        </ul>
-    </nav>
-
-    <main>
-
-        <!-- Date -->
-
-        <div id="date">
-            <p>Saturday, 23.05.2020</p>
-        </div>
-
-        <!-- Top news banner -->
-
-        <div id="topnews">
-            <p>Top news</p>
-        </div>
-
-        <!-- Sidebanner 1 -->
-
-        <div class="sidebanner" id="sidebanner1"><a href="https://www.codefactory.wien" target="_blank"><img src="img/banner-2.png" alt="Banner 1 image"></a></div>
-
-        <!-- Article row 1 -->
-
-        <div class="articlerow">
-            <article><a href="article.html"><img src="img/nasa.png" alt="nasa image">
-                <p>NASA is trying to squash conspiracy theories about the space station leak</p></a>
-            </article>
-            <article><a href="article.html">
-                    <img src="img/eu.png" alt="EU image">
-                <p>EU approves controversial Copyright Directive, including internet ‘link tax’</p></a>
-
-            </article>
-            <article><a href="article.html">
-                    <img src="img/jeff.png" alt="Jeff Bezos image">
-                    <p>Jeff Bezos is going to create schools where ‘the child is the customer’</p></a>
-            </article>
-        </div>
-
-        <!-- Popular banner -->
-
-        <div id="popular">
-            <p>Popular</p>
-        </div>
-
-        <!-- Article row 2 -->
-
-        <div class="articlerow">
-            <article><a href="article.html">
-                <img src="img/polar.png" alt="Polar image">
-                <p>Polar’s new fitness watch will measure the wattage of your exercise</p></a>
-            </article>
-            <article><a href="article.html">
-                <img src="img/musk.jpg" alt="Musk image">
-                <p>Elon Musk smokes marijuana live on web show</p></a>
-            </article>
-            <article><a href="article.html">
-                <img src="img/snowden.jpg" alt="Snowden image">
-                <p>Edward Snowden surveillance powers ruled unlawful</p></a>
-            </article>
-        </div>
-
-        <!-- Ad banner -->
-
-        <div id="banner3">
-            <a href="https://www.codefactory.wien" target="_blank">
-                <img src="img/banner-3.png" alt="Banner 3"></a>
-        </div>
-
-        <!-- Sidebanner 2 -->
-
-        <div class="sidebanner" id="sidebanner2"><a href="https://www.codefactory.wien" target="_blank">
-                <img src="img/banner-4.png" alt="Banner 4 image"></a>
-        </div>
-
-        <!-- Article row 3 -->
-
-        <div class="row" id="raw1">
-            <article class="article2"><a href="article.html">
-                    <img src="img/iphone.png" alt="IPhone image">
-                <p>How to preorder the iPhone XS, XS Max, and XR</p></a>
-            </article>
-            <article class="article2"><a href="article.html">
-                    <img src="img/smart.png" alt="smart image">
-                <p>This smart power strip lets you individually control each outlet</p></a>
-            </article>
-        </div>
-
-        <div class="row" id="raw2">
-            <article class="article2"><a href="article.html">
-                    <img src="img/one.png" alt="One image">
-                <p>OnePlus announces super cheap USB-C earbuds</p></a>
-
-            </article>
-            <article class="article2"><a href="article.html">
-                    <img src="img/phone.png" alt="phone image">
-                <p>Spotify raises limit for offline downloads to 10,000 songs per device</p></a>
-            </article>
-        </div>
-
-        <!-- Footer -->
-
-        <footer>
-            <nav id="footernavbar">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="tech.html">Tech</a></li>
-                    <li><a href="culture.html">Culture</a></li>
-                    <li><a href="video.html">Video</a></li>
-                </ul>
-            </nav>
-
-            <img id="logobottom" src="img/logo-newspaper-cf.png" alt="CF Logo">
-
-
-            <p id="copyright">Max Strauss - CodeFactory 2020</p>
+	<nav>
+		<ul>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#tech">Tech</a></li>
+			<li><a href="#culture">Culture</a></li>
+			<li><a href="#video">Video</a></li>
+		</ul>
+	</nav>
 
 
 
-        </footer>
+	<main>
+		<!-- Date -->
+		<div id="date">Saturday, 23.05.2029</div>
 
+		<!-- Top news banner -->
+		<div id="topnews">
+			<p>Top news</p>
+		</div>
 
+		<!--Sidebanner 1-->
+		<div class="sidebanner" ID="FSWDdesktop"><a href="https://www.codefactory.wien" target="_blank">
+				<img src="img/banner-2.png" alt="Sidebanner 1"></a>
+		</div>
 
+		<!--Article row 1-->
+		<div>
+			<article><a target="_blank" href="article.html">
+					<img src="img/nasa.png" alt="NASA image">
+					<p>NASA is trying to squash conspiracy theories about the space station leak</p>
+				</a>
+			</article>
 
+			<article><a target="_blank" href="article.html">
+					<img src="img/eu.png" alt="EU image">
+					<p>EU approves controversial Copyright Directive, including internet ‘link tax’</p>
+				</a>
+			</article>
 
-    </main>
+			<article><a target="_blank" href="article.html">
+					<img src="img/jeff.png" alt="jeff image">
+					<p>Jeff Bezos is going to create schools where ‘the child is the customer’</p>
+				</a>
+			</article>
 
+			<article id="fswdmobile"><a href="https://www.codefactory.wien" target="_blank">
+					<img src="img/banner-mobile-fswd.png" alt="FSWD mobile banner"></a>
+			</article>
+		</div>
 
+		<!-- Popular banner -->
+		<div id="topnews">
+			<p>Popular</p>
+		</div>
 
+		<!-- Article row 2 -->
+		<div>
+			<article><a target="_blank" href="article.html">
+					<img src="img/polar.png" alt="polar image">
+					<p>Polar’s new fitness watch will measure the wattage of your exercise</p>
+				</a>
+			</article>
 
+			<article><a target="_blank" href="article.html">
+					<img src="img/musk.jpg" ali="musk image">
+					<p>Elon Musk smokes marijuana live on web show</p>
+				</a>
+			</article>
 
+			<article><a target="_blank" href="article.html">
+					<img src="img/snowden.jpg" alt="snowden image">
+					<p>Edward Snowden surveillance powers ruled unlawful</p>
+				</a>
+			</article>
 
+			<!-- Ad banner-->
 
+			<div id="banner3">
+				<a href="https://www.codefactory.wien" target="_blank">
+					<img src="img/banner-3.png" alt="Banner 3"></a>
+			</div>
 
+			<!-- Article row 3 -->
+			<article class="articlebox"><a target="_blank" href="article.html">
+					<img src="img/iphone.png" alt="phone image">
+					<p>How to preorder the iPhone XS, XS Max, and XR</p>
+				</a>
+			</article>
 
+			<article class="articlebox"><a target="_blank" href="article.html">
+					<img src="img/smart.png" alt="smart image">
+					<p>This smart power strip lets you individually control each outlet</p>
+				</a>
+			</article>
+
+			<article class="articlebox"><a target="_blank" href="article.html">
+					<img src="img/one.png" alt="one image">
+					<p>OnePlus announces super cheap USB-C earbuds</p>
+				</a>
+			</article>
+
+			<article class="articlebox"><a target="_blank" href="article.html">
+					<img src="img/phone.png" alt="phone image">
+					<p>Spotify raises limit for offline downloads to 10,000 songs per device</p>
+				</a>
+			</article>
+		</div>
+
+		<!-- Sidebanner 2 -->
+		<div class="sidebanner" id="CFdesktop"><a target="_blank" href="https://www.codefactory.wien">
+				<img src="img/banner-4.png" alt="Sidebanner 2"></a>
+		</div>
+	</main>
+
+	<!-- Footer -->
+	<footer>
+		<nav id="navbottom">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="tech.html">Tech</a></li>
+				<li><a href="culture.html">Culture</a></li>
+				<li><a href="video.html">Video</a></li>
+			</ul>
+		</nav>
+
+		<img id="logobottom" src="img/logo-newspaper-cf.png" alt="CFLogo">
+
+		<p id="footertext">Max Strauss - CodeFactory 2020</p>
+
+	</footer>
 
 </body>
 
