--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 			</ul>
 		</nav>
 
-		<img id="logobottom" src="img/logo-newspaper-cf.png" alt="CFLogo">
+		<img id="logobottom" src="img/logo-newspaper-cf.png" alt="The Logo">
 
 		<p id="footertext">Max Strauss - CodeFactory 2020</p>
 
